infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: ecommercejj.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: ecommerceauth-srv
                port:
                  number: 5001
          - path: /api/products/?(.*)
            pathType: Prefix
            backend:
              service:
                name: ecommerceproduct-srv
                port:
                  number: 5001
          - path: /api/carts/?(.*)
            pathType: Prefix
            backend:
              service:
                name: ecommercecart-srv
                port:
                  number: 5001
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: ecommerceorders-srv
                port:
                  number: 5001
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: ecommerceclient-srv
                port:
                  number: 3000
